@@ -39,22 +39,48 @@ var $array1 = array();
    ////////////////////////////////////////////////////////////////////////////////////////////////
    
 	
-   function update_chart($params) {
-       
-   
+     function ethereum_data($params) {
+     
+     global $ct;
+     
+     
     
-   }
+     }
+	
+		
+   ////////////////////////////////////////////////////////////////////////////////////////////////
+   ////////////////////////////////////////////////////////////////////////////////////////////////
+   
+   
+     function solana_data($params) {
+     
+     global $ct;
+     
+     
+    
+     }
 		
 		
    ////////////////////////////////////////////////////////////////////////////////////////////////
    ////////////////////////////////////////////////////////////////////////////////////////////////
    
 	
-   function render_chart($params) {
+     function update_chart($params) {
        
    
     
-   }
+     }
+		
+		
+   ////////////////////////////////////////////////////////////////////////////////////////////////
+   ////////////////////////////////////////////////////////////////////////////////////////////////
+   
+	
+     function render_chart($params) {
+       
+   
+    
+     }
 		
 		
 	////////////////////////////////////////////////////////////////////////////////////////////////
